added Image scaffold and About page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<% content_for :title do %>Try ImageMagick!<% end %>
+
+<center>
+<p>
+  <h1>Try ImageMagick</h1>
+</p>
+<p>
+  <h4>An online interface for the free ImageMagick graphics manipulation software.</h4>
+</p>
+<p>
+  <a href="http://www.imagemagick.org/"><img src="http://www.imagemagick.org/image/wizard.jpg" style="margin:20px"/></a>
+</p>
+
+<p>
+  <h3><a href="/images">Click here to try it out.</a></h3>
+</p>
+
+</center>
