change output url

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -3,7 +3,7 @@
 <p>
   <strong>Preview:</strong>
   <%= image_tag @image.location, :style => "margin:20px; display:inline" %>
-  <%= image_tag "/uploads/pictures/#{@image.id}/converted_image_from_controller", :style => "margin:20px; display:inline" %>
+  <%= image_tag "/uploads/pictures/#{@image.id}/converted_image_from_controller.jpg", :style => "margin:20px; display:inline" %>
 </p>
 
 <p>
