small layout edits

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :location, :label => 'Upload an image' %>
+    <%= f.input :location, :label => 'Upload a JPG, GIF, or PNG' %>
     <br>
     <%= f.input :command, :label => 'Enter convert options' %>    
   </div>
