instructions & sample commands, etc.

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,7 +2,7 @@
 
 <div id="IM-resources" style="margin:50px">
   
-<h3>About ImageMagick</h3>
+<h4>About ImageMagick</h4>
 <p>
 <ul>
   <li><a href="http://imagemagick.org/script/index.php">ImageMagick homepage</a></li>
@@ -10,20 +10,22 @@
 </ul>
 </p>
 
-<h3>How to use ImageMagick</h3>
+<h4>How to use ImageMagick</h4>
 <p>
 <ul>
-  <li><a href="http://www.imagemagick.org/Usage/">Examples of ImageMagick usage</a></li>
   <li><a href="http://www.imagemagick.org/script/command-line-tools.php">Command-Line Tools</a></li>
+  <li><a href="http://www.imagemagick.org/script/command-line-processing.php">Command-Line Processing</a></li>
+  <li><a href="http://www.imagemagick.org/script/command-line-options.php">Command-Line Options</a></li>
+  <li><a href="http://www.imagemagick.org/Usage/">Examples of ImageMagick usage</a></li>
 </ul>
 </p>
 
-<h3>Online ImageMagic Apps</h3>
+<h4>Online ImageMagic Apps</h4>
 <p>
 <ul>
   <li><a href="http://www.imagemagick.org/MagickStudio/scripts/MagickStudio.cgi">ImageMagick Studio</a></li>
   <li><a href="http://www.imagemagick.org/script/command-line-options.php">Jqmagick: ImageMagick & Jquery</a></li>
-  <li>This site, of course! <a href="/">Try ImageMagick</a></li>
+  <li>This site! <a href="/">Try ImageMagick</a></li>
 </ul>
 </p>
 
