--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,10 +5,10 @@
   <h1>Try ImageMagick</h1>
 </p>
 <p>
-  <h4>An online interface for the free ImageMagick graphics manipulation software.</h4>
+  <h4>An online interface for the free <a href="http://www.imagemagick.org/">ImageMagick</a> graphics manipulation software.</h4>
 </p>
 <p>
-  <a href="http://www.imagemagick.org/"><img src="http://www.imagemagick.org/image/wizard.jpg" style="margin:20px"/></a>
+  <img src="http://www.imagemagick.org/image/wizard.jpg" style="margin:20px"/>
 </p>
 
 <p>
