Add link back to image list

--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -29,10 +29,9 @@
 <br>  -charcoal 5 <a href="http://www.imagemagick.org/script/command-line-options.php#charcoal">(Simulates a charcoal drawing)</a>
 <br>  -negate <a href="http://www.imagemagick.org/script/command-line-options.php#negate">(Inverts the image colors)</a>
 
-
-
-
 <br><br>
 Check out the <a href="http://www.imagemagick.org/script/index.php"><u>official ImageMagick website</u></a> for a complete list of <a href="http://www.imagemagick.org/script/command-line-options.php"><u>image-conversion options</u></a> and how to use them!
 </p>
 
+<br><br><br>
+<%=link_to 'View all images', images_path %>
