more changes, mainly in views

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <%= image_tag @image.location, :style => "margin:20px; display:inline" %>
-  <%= image_tag "/uploads/pictures/#{@image.id}/converted_image_from_controller.jpg", :style => "margin:20px; display:inline" %>
+  <%= image_tag "/uploads/pictures/#{@image.id}/converted_image.jpg", :style => "margin:20px; display:inline" %>
 </p>
 
 <%= link_to 'Upload and convert another image', new_image_path %> | <%=link_to 'All images', images_path %>
