--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= image.id %></td><td></td> 
         <td><%= image_tag image.location, :style => "height:150px" %></td><td></td> 
-        <td><%= image_tag "/uploads/pictures/#{image.id}/converted_image_from_controller.jpg", :style => "height:150px" %></td><td></td> 
+        <td><%= image_tag "/uploads/pictures/#{image.id}/converted_image.jpg", :style => "height:150px" %></td><td></td> 
         <td><%= image.command %></td><td></td>      
         <td><%= link_to 'Show', image %></td><td></td> 
         <td><%= link_to 'Delete', image, method: :delete, data: { confirm: 'Are you sure?' } %></td><td></td> 
