layout stylistic changes

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,6 +1,10 @@
 // import the CSS framework
 @import "bootstrap";
 
+td, th {
+  text-align: center;
+}
+
 // make all images responsive by default
 img {
   @extend .img-responsive;
