--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,7 +1,7 @@
 <h2>Original & converted images</h2>
 <br>
 <p>
-  <strong>Conversion command-line options:</strong><br>
+  <strong>Conversion options: </strong><br>
   <%= @image.command %>
 </p>
 
@@ -11,7 +11,7 @@
 </p>
 
 <%= link_to 'Upload and convert another image', new_image_path %> | <%=link_to 'All images', images_path %>
-
+<br><br>
 <p>
-  (If you don't see the converted image, double-check to make sure you uploaded the file and entered the <a href="http://www.imagemagick.org/script/command-line-options.php">options</a> correctly.)
+  (If you don't see the converted image, check to make sure that you uploaded the file & entered the <a href="http://www.imagemagick.org/script/command-line-options.php">options</a> correctly.)
 </p>
