--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -6,7 +6,7 @@
     <tr>
       <th>Original image</th><th width="10"></th>
       <th>Converted image</th><th width="10"></th>     
-      <th>Options</th><th width="10"></th>
+      <th>Command-line options</th><th width="10"></th>
       <th>Show full size</th><th width="10"></th>
       <th>Delete image</th>
     </tr>
