--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -22,13 +22,16 @@
 <p>  
   <strong>A few sample options you may like to try:</strong>
   <br>
-  
-<br>  -vignette 10x10+10+10% <a href="http://www.imagemagick.org/script/command-line-options.php#vignette">(Creates a vignette effect around the image)</a>
-<br>  -radial-blur 20 <a href="http://www.imagemagick.org/script/command-line-options.php#radial-blur">(Creates a rotational blur around the center of the image)</a>
-<br>  +polaroid <a href="http://www.imagemagick.org/script/command-line-options.php#polaroid">(Adds a Polaroid-like border and rotates picture at a random angle)</a>
-<br>  -charcoal 5 <a href="http://www.imagemagick.org/script/command-line-options.php#charcoal">(Simulates a charcoal drawing)</a>
-<br>  -negate <a href="http://www.imagemagick.org/script/command-line-options.php#negate">(Inverts the image colors)</a>
 
+<br>  -negate <a href="http://www.imagemagick.org/script/command-line-options.php#negate">(Inverts the image colors)</a>
+<br>  -raise 15 <a href="http://www.imagemagick.org/script/command-line-options.php#raise">(Creates a 3-D raised border effect)</a>  
+<br>  +polaroid <a href="http://www.imagemagick.org/script/command-line-options.php#polaroid">(Adds a Polaroid-like border and rotates picture at a random angle)</a>
+<br>  -vignette 10x10+10+10% <a href="http://www.imagemagick.org/script/command-line-options.php#vignette">(Creates a vignette effect around the image)</a>
+<br>  -charcoal 5 <a href="http://www.imagemagick.org/script/command-line-options.php#charcoal">(Simulates a charcoal drawing)</a>
+
+
+
+  
 <br><br>
 Check out the <a href="http://www.imagemagick.org/script/index.php"><u>official ImageMagick website</u></a> for a complete list of <a href="http://www.imagemagick.org/script/command-line-options.php"><u>image-conversion options</u></a> and how to use them!
 </p>
