--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Try ImageMagick! (Beta)', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Try ImageMagick!', root_path, class: 'navbar-brand' %>
 
     </div>
     <div class="collapse navbar-collapse">
